Adding some html to start with develop

--- a/first-app/src/app/home/home-component/home-component.component.html
+++ b/first-app/src/app/home/home-component/home-component.component.html
@@ -1,1 +1,11 @@
-<p>home-component works!</p>
+<div id="bodyHome">
+    <h1>HOME</h1>
+    <div id="navList">
+        <ul>
+            <li>Home</li>
+            <li>Photo/Video</li>
+            <li>Code</li>
+            <li>About</li>
+        </ul>
+    </div>
+</div>
