--- a/first-app/src/app/loggin/loggin-component/loggin-component.component.html
+++ b/first-app/src/app/loggin/loggin-component/loggin-component.component.html
@@ -1,1 +1,5 @@
-<p>loggin-component works!</p>
+<div id="bodyLoggin">
+    <form [formGroup]="logginForm">
+        <button id="btnLoggin" type="button">Log in</button>
+    </form>
+</div>
