Adding HomePage html

--- a/first-app/src/app/app.component.html
+++ b/first-app/src/app/app.component.html
@@ -1,2 +1,3 @@
 
-<app-loggin-component></app-loggin-component>
+<!-- <app-loggin-component></app-loggin-component> -->
+<app-home-component></app-home-component>
