--- a/first-app/src/app/home/home-component/home-component.component.html
+++ b/first-app/src/app/home/home-component/home-component.component.html
@@ -9,3 +9,58 @@
         </ul>
     </div>
 </div>
+
+<div class="header">
+    Explore projects by dragging canvas
+</div>
+<div class="container">
+    <div class="row">
+        <div class=" block"></div>
+        <div class=" block"></div>
+        <div class=" block"></div>
+        <div class=" block"></div>
+        <div class=" block"></div>
+        <div class=" block"></div>
+    </div>
+    <div class="row">
+        <div class=" block"></div>
+        <div class=" block"></div>
+        <div class=" block"></div>
+        <div class=" block"></div>
+        <div class=" block"></div>
+        <div class=" block"></div>
+    </div>
+    <div class="row">
+        <div class=" block"></div>
+        <div class=" block"></div>
+        <div class=" block"></div>
+        <div class=" block"></div>
+        <div class=" block"></div>
+        <div class=" block"></div>
+    </div>
+    <div class="row">
+        <div class=" block"></div>
+        <div class=" block"></div>
+        <div class=" block"></div>
+        <div class=" block"></div>
+        <div class=" block"></div>
+        <div class=" block"></div>
+    </div>
+    <div class="row">
+        <div class=" block"></div>
+        <div class=" block"></div>
+        <div class=" block"></div>
+        <div class=" block"></div>
+        <div class=" block"></div>
+        <div class=" block"></div>
+    </div>
+
+</div>
+<script>
+    var element = document.querySelector(".container");
+
+    panzoom(element, {
+        minZoom: 1,
+        maxZoom: 1
+    });
+</script>
