--- a/first-app/src/app/loggin/loggin-component/loggin-component.component.html
+++ b/first-app/src/app/loggin/loggin-component/loggin-component.component.html
@@ -1,5 +1,5 @@
-<div id="bodyLoggin">
+<!-- <div id="bodyLoggin">
     <form [formGroup]="logginForm">
         <button id="btnLoggin" type="button">Log in</button>
     </form>
-</div>
+</div> -->
