--- a/first-app/src/app/home/home-component/home-component.component.css
+++ b/first-app/src/app/home/home-component/home-component.component.css
@@ -1,3 +1,45 @@
 #bodyHome {
   background-color: dimgray;
 }
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100vh;
+  background: #202020;
+  overflow: hidden;
+}
+.header {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: "Monument Extended";
+  text-transform: uppercase;
+  color: white;
+  z-index: 2;
+}
+.container {
+  position: absolute;
+  width: 200%;
+  height: 200vh;
+}
+.row {
+  display: flex;
+  justify-content: space-around;
+  margin: 4em 0;
+}
+.block {
+  width: 400px;
+  height: 500px;
+  background: grey;
+  margin: 1em;
+  filter: grayscale(1);
+  opacity: 0.4;
+  transition: 1s;
+}
+.block:hover {
+  filter: grayscale(0);
+  opacity: 1;
+}
